# ReAct-from-scratch

./: .env.example  README.md  pyproject.toml
src/react_agent_from_scratch/: __init__.py  cli.py  config.py  context.py  main.py  message.py  output_parser.py  prompts.py  run.py  tools.py
src/react_agent_from_scratch/evals/: run.py  test_output_parser.py  test_react_recovery.py  test_run_limits.py  test_sophons_agent.py  test_tool_recovery.py  test_tools.py
src/react_agent_from_scratch/llm/: agent.py  deepseek.py  llm_client.py  model.py  ollama.py  provider.py
src/react_agent_from_scratch/observability/: config.py  langfuse.py  phoenix.py  provider.py  tracing.py
src/react_agent_from_scratch/tools/: __init__.py  web_search.py
