[project]
name = "react-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luchetu", email = "humluchetu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
react-agent-from-scratch = "react_agent_from_scratch:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
