[project]
name = "react-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luchetu", email = "humluchetu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=17.2.0",
    "arize-phoenix-otel>=0.16.1",
    "langfuse>=4.7.1",
    "openai>=2.38.0",
    "opentelemetry-api>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
react-agent-from-scratch = "react_agent_from_scratch:main"
react-agent-evals = "react_agent_from_scratch.evals.run:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
